--- a/LatinTranslate/LatinTranslate.csproj
+++ b/LatinTranslate/LatinTranslate.csproj
@@ -53,5 +53,15 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup> 
+  <Content Include="resources\**"> 
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
+  </Content> 
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="resources\Femina.txt" />
+    <Content Include="resources\Servus.txt" />
+    <Content Include="resources\Verbum.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
